worked on session storage