@@ -6,14 +6,18 @@ import com.auction.service.NotificationService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
+import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/notifications")
 public class NotificationController {
     private final NotificationService notificationService;
+
     public NotificationController(NotificationService notificationService) {
         this.notificationService = notificationService;
     }
+
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<NotificationDto>> getNotificationsByUser(@PathVariable Long userId) {
         List<NotificationDto> dtos = notificationService.getNotificationsByUser(userId).stream()
@@ -29,10 +33,13 @@ public class NotificationController {
         return ResponseEntity.ok(dtos);
     }
 
-    // Endpoint to get general notifications (ALL and SIGNED_IN)
     @GetMapping("/general")
     public ResponseEntity<List<NotificationDto>> getGeneralNotifications() {
-        List<NotificationDto> dtos = notificationService.getNotificationsByTarget("ALL").stream()
+        List<NotificationDto> dtos = new ArrayList<>();
+        
+        // Get ALL notifications
+        List<Notification> allNotifications = notificationService.getNotificationsByTarget("ALL");
+        dtos.addAll(allNotifications.stream()
             .map(n -> new NotificationDto(
                 n.getId(),
                 n.getTitle(),
@@ -41,8 +48,11 @@ public class NotificationController {
                 n.isRead(),
                 n.getCreatedAt()
             ))
-            .toList();
-        dtos.addAll(notificationService.getNotificationsByTarget("SIGNED_IN").stream()
+            .collect(Collectors.toList()));
+            
+        // Get SIGNED_IN notifications
+        List<Notification> signedInNotifications = notificationService.getNotificationsByTarget("SIGNED_IN");
+        dtos.addAll(signedInNotifications.stream()
             .map(n -> new NotificationDto(
                 n.getId(),
                 n.getTitle(),
@@ -51,11 +61,11 @@ public class NotificationController {
                 n.isRead(),
                 n.getCreatedAt()
             ))
-            .toList());
+            .collect(Collectors.toList()));
+            
         return ResponseEntity.ok(dtos);
     }
 
-    // Only admins can create notifications
     @PostMapping
     public ResponseEntity<?> createNotification(@RequestBody NotificationDto dto) {
         notificationService.createNotification(dto);
